--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ header{
     padding: 20px;
 }
 
+#burger{
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
 #menu button{
     margin-top: 10px;
     padding: 10px;
